--- a/app/src/main/res/layout/activity_picture.xml
+++ b/app/src/main/res/layout/activity_picture.xml
@@ -6,11 +6,80 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@android:color/black"
+
     tools:context="com.tomsksummer.roix.picture3d.PictureActivity">
 
-    <TextView
-        android:text="@string/hello_world"
+
+
+
+
+
+    <com.tomsksummer.roix.picture3d.GLEngine.PictureSurfaceView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/surfaceView"
+
+
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/linearLayout">
+    </com.tomsksummer.roix.picture3d.GLEngine.PictureSurfaceView>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/surfaceView"
+        android:layout_alignEnd="@+id/surfaceView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/linearLayout">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/_image_button_size"
+            android:text="menu"
+            android:id="@+id/menubutton"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <ImageButton
+            android:layout_width="@dimen/_image_button_size"
+            android:layout_height="@dimen/_image_button_size"
+
+            android:id="@+id/handButton"
+            android:layout_below="@+id/surfaceView"
+            android:layout_toEndOf="@+id/menubutton"
+            android:src="@drawable/hand"
+            android:layout_alignParentBottom="true"
+            android:scaleType="fitStart"
+            android:layout_toRightOf="@+id/menubutton" />
+
+        <ImageButton
+            android:layout_width="@dimen/_image_button_size"
+            android:layout_height="@dimen/_image_button_size"
+            android:id="@+id/bendButton"
+            android:layout_below="@+id/surfaceView"
+            android:layout_toRightOf="@+id/handButton"
+            android:layout_toEndOf="@+id/handButton"
+            android:src="@drawable/bend"
+            android:scaleType="fitStart" />
+
+        <ImageButton
+            android:layout_width="@dimen/_image_button_size"
+            android:layout_height="@dimen/_image_button_size"
+            android:id="@+id/undoButton"
+            android:layout_below="@+id/surfaceView"
+            android:layout_toRightOf="@+id/bendButton"
+            android:layout_toEndOf="@+id/bendButton"
+            android:src="@drawable/undo"
+            android:scaleType="fitStart" />
+    </LinearLayout>
 
 </RelativeLayout>
